# quarto-tutorial

./: .gitignore  .mise.toml  README.md  _quarto.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: about.html  index.html  search.json
docs/src/: hello.html  japanese.html
src/: hello.ipynb  japanese.ipynb
